--- a/files/client_favorites_list.htm
+++ b/files/client_favorites_list.htm
@@ -156,7 +156,7 @@
 						<div class="product__available">
 							<span class="goodsModRestValue" data-value="{favorites_goods.MAX_REST_VALUE}">
 								{% IF favorites_goods.MAX_REST_VALUE > 0 %}
-									В наличии {% IF favorites_goods.MAX_REST_VALUE > 10 %}Много{% ELSE %}Мало{% ENDIF %}
+									В наличии {% IF favorites_goods.MAX_REST_VALUE > 10 %}много{% ELSE %}мало{% ENDIF %}
 								{% ELSE %}
 									нет в наличии
 								{% ENDIF %}
