--- a/files/html.htm
+++ b/files/html.htm
@@ -565,7 +565,7 @@
 									<div class="product__available">
 										<span class="goodsModRestValue" data-value="{index_page_favorites_goods.MAX_REST_VALUE}">
 											{% IF index_page_favorites_goods.MAX_REST_VALUE > 0 %}
-												В наличии {% IF index_page_favorites_goods.MAX_REST_VALUE > 10 %}Много{% ELSE %}Мало{% ENDIF %}
+												В наличии {% IF index_page_favorites_goods.MAX_REST_VALUE > 10 %}много{% ELSE %}мало{% ENDIF %}
 											{% ELSE %}
 												нет в наличии
 											{% ENDIF %}
@@ -1390,7 +1390,7 @@
 								<div class="product__available">
 									<span class="goodsModRestValue" data-value="{index_page_goods.MAX_REST_VALUE}">
 										{% IF index_page_goods.MAX_REST_VALUE > 0 %}
-											В наличии {% IF index_page_goods.MAX_REST_VALUE > 10 %}Много{% ELSE %}Мало{% ENDIF %}
+											В наличии {% IF index_page_goods.MAX_REST_VALUE > 10 %}много{% ELSE %}мало{% ENDIF %}
 										{% ELSE %}
 											нет в наличии
 										{% ENDIF %}
@@ -1731,7 +1731,7 @@
 								<div class="product__available">
 									<span class="goodsModRestValue" data-value="{index_page_new_goods.MAX_REST_VALUE}">
 										{% IF index_page_new_goods.MAX_REST_VALUE > 0 %}
-											В наличии {% IF index_page_new_goods.MAX_REST_VALUE > 10 %}Много{% ELSE %}Мало{% ENDIF %}
+											В наличии {% IF index_page_new_goods.MAX_REST_VALUE > 10 %}много{% ELSE %}мало{% ENDIF %}
 										{% ELSE %}
 											нет в наличии
 										{% ENDIF %}
@@ -2085,7 +2085,7 @@
 									<div class="product__available">
 										<span class="goodsModRestValue" data-value="{recently_viewed_goods.MAX_REST_VALUE}">
 											{% IF recently_viewed_goods.MAX_REST_VALUE > 0 %}
-												В наличии {% IF recently_viewed_goods.MAX_REST_VALUE > 10 %}Много{% ELSE %}Мало{% ENDIF %}
+												В наличии {% IF recently_viewed_goods.MAX_REST_VALUE > 10 %}много{% ELSE %}мало{% ENDIF %}
 											{% ELSE %}
 												нет в наличии
 											{% ENDIF %}
@@ -2306,7 +2306,7 @@
 									<div class="product__available">
 										<span class="goodsModRestValue" data-value="{cart_related_goods.MAX_REST_VALUE}">
 											{% IF cart_related_goods.MAX_REST_VALUE > 0 %}
-												В наличии {% IF cart_related_goods.MAX_REST_VALUE > 10 %}Много{% ELSE %}Мало{% ENDIF %}
+												В наличии {% IF cart_related_goods.MAX_REST_VALUE > 10 %}много{% ELSE %}мало{% ENDIF %}
 											{% ELSE %}
 												нет в наличии
 											{% ENDIF %}
