--- a/files/goods_list.htm
+++ b/files/goods_list.htm
@@ -407,7 +407,7 @@
 						<div class="product__available">
 							<span class="goodsModRestValue" data-value="{goods.MAX_REST_VALUE}">
 								{% IF goods.MAX_REST_VALUE > 0 %}
-									В наличии {% IF goods.MAX_REST_VALUE > 10 %}Много{% ELSE %}Мало{% ENDIF %}
+									В наличии {% IF goods.MAX_REST_VALUE > 10 %}много{% ELSE %}мало{% ENDIF %}
 								{% ELSE %}
 									нет в наличии
 								{% ENDIF %}
@@ -624,7 +624,7 @@
 							<div class="product__available">
 								<span class="goodsModRestValue" data-value="{goods.MAX_REST_VALUE}">
 									{% IF goods.MAX_REST_VALUE > 0 %}
-										В наличии {% IF goods.MAX_REST_VALUE > 10 %}Много{% ELSE %}Мало{% ENDIF %}
+										В наличии {% IF goods.MAX_REST_VALUE > 10 %}много{% ELSE %}мало{% ENDIF %}
 									{% ELSE %}
 										нет в наличии
 									{% ENDIF %}
