[fix] 1.17 Notifications, Other images

--- a/files/goods.htm
+++ b/files/goods.htm
@@ -230,7 +230,16 @@
 							<span>В 1 клик</span>
 						</button>
 						<!-- Уведомить -->
-						<a class="add-notify button button3" data-fancybox data-src="#fancybox__notify" href="javascript:;">
+						<a class="add-notify button button3"
+							title="Уведомить"
+							data-tooltip="Уведомить"
+							rel="nofollow"
+							data-fancybox
+							data-src="#fancybox__notify"
+							href="javascript:;"
+							data-name="{GOODS_NAME}"
+							data-art="{GOODS_MOD_ART_NUMBER}"
+						>
 							<i class="icon-notify"></i>
 							<span>Уведомить</span>
 						</a>
